MOBI-768 Menu Button wraps long text - fix bb10
git-svn-id: http://anonsvn.icesoft.org/repo/icemobile/trunk/icemobile@35988 1de00972-ac04-4911-a46b-06793c8d78d9

--- a/resources/themes/base/1_button.css
+++ b/resources/themes/base/1_button.css
@@ -43,6 +43,8 @@
     padding: 0.6em 15px;
     text-align: center;
     text-decoration: none;
+    overflow:hidden;
+    text-overflow:ellipsis;
 }
 a.mobi-button:hover{ text-decoration:none;}
 .mobi-pagePanel-header .mobi-button{
