--- a/resources/themes/bb10/2_ui.scss
+++ b/resources/themes/bb10/2_ui.scss
@@ -2245,7 +2245,7 @@ label.ui-select { font-size: 16px; line-height: 1.4; font-weight: normal; margin
 .ui-selectmenu .ui-header .ui-title { margin: 0.6em 46px 0.8em; }
 @media all and (min-width: 450px){
 	.ui-field-contain label.ui-select { vertical-align: top; display: inline-block; width: 20%; margin: 0 2% 0 0; }
-	.ui-field-contain .ui-select, .ui-field-contain select /* mobi */{ width: 78%; display: inline-block; }
+	.ui-field-contain .ui-select{ width: 78%; display: inline-block; }
 	.ui-hide-label .ui-select { width: 100%; } 
 }
 /* when no placeholder is defined in a multiple select, the header height doesn't even extend past the close button.  this shim's content in there */
